--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
         </tr>
         <tr>
           <td>
-            <input id="hdpp-counts" type="checkbox" value="true"  /> <span>Enable Ticket Counts</span>
+            <input id="hdpp-counts" type="checkbox" value="true"  /> <label for="hdpp-counts">Enable Ticket Counts</label>
           </td>
           <td>
             <select id="hdpp-rows">
@@ -65,9 +65,9 @@
         <tr>
           <td><select id="hdpp-viewOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-views" hdpp-sort="false">Add</button></td>
           <td rowspan="3">
-            <input id="hdpp-stats-leader" type="checkbox" value="true"  /> <span>Show Leaderboard</span><br />
-            <input id="hdpp-stats-rank" type="checkbox" value="true"  /> <span>Show Ranking</span><br />
-            <input id="hdpp-stats-totals" type="checkbox" value="true"  /> <span>Show Tickets Closed (7 Days/30 Days)</span>
+            <input id="hdpp-stats-leader" type="checkbox" value="true"  /> <label for="hdpp-stats-leader">Show Leaderboard</label><br />
+            <input id="hdpp-stats-rank" type="checkbox" value="true"  /> <label for="hdpp-stats-rank">Show Ranking</label><br />
+            <input id="hdpp-stats-totals" type="checkbox" value="true"  /> <label for="hdpp-stats-totals">Show Tickets Closed (7 Days/30 Days)</label>
             <span class='hdpp-note' style="margin-top: 9px; font-style:italic;">NOTE: This feature is restricted to admin users only. Use the <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin to bypass this restriction.</span>
           </td>
         </tr>
@@ -196,7 +196,7 @@
         <tr>
           <td />
           <td>
-            <input id="hdpp-reqOpts" type="checkbox" value="true"  /> <span>Required on "Close as Duplicate" also</span>
+            <input id="hdpp-reqOpts" type="checkbox" value="true"  /> <label for="hdpp-reqOpts">Required on "Close as Duplicate" also</label>
           </td>
         </tr>
       </table>
@@ -227,7 +227,7 @@
         </tr>
         <tr>
           <td>
-            <input id="hdpp-tidyMulti" type="checkbox" value="true"  /> <span>Tidy up multi-line comments also</span>
+            <input id="hdpp-tidyMulti" type="checkbox" value="true"  /> <label for="hdpp-tidyMulti">Tidy up multi-line comments also</label>
           </td>
           <td />
         </tr>
