Add GitHub link & minor styling changes

--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
         </tr>
         <tr>
           <td>
-            <input id="hdpp-counts" type="checkbox" value="true"  /> <label for="hdpp-counts">Enable Ticket Counts</label>
+            <input id="hdpp-counts" type="checkbox" value="true"> <label for="hdpp-counts">Enable Ticket Counts</label>
           </td>
           <td>
             <select id="hdpp-rows">
@@ -65,9 +65,9 @@
         <tr>
           <td><select id="hdpp-viewOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-views" hdpp-sort="false">Add</button></td>
           <td rowspan="3">
-            <input id="hdpp-stats-leader" type="checkbox" value="true"  /> <label for="hdpp-stats-leader">Show Leaderboard</label><br />
-            <input id="hdpp-stats-rank" type="checkbox" value="true"  /> <label for="hdpp-stats-rank">Show Ranking</label><br />
-            <input id="hdpp-stats-totals" type="checkbox" value="true"  /> <label for="hdpp-stats-totals">Show Tickets Closed (7 Days/30 Days)</label>
+            <input id="hdpp-stats-leader" type="checkbox" value="true"> <label for="hdpp-stats-leader">Show Leaderboard</label><br />
+            <input id="hdpp-stats-rank" type="checkbox" value="true"> <label for="hdpp-stats-rank">Show Ranking</label><br />
+            <input id="hdpp-stats-totals" type="checkbox" value="true"> <label for="hdpp-stats-totals">Show Tickets Closed (7 Days/30 Days)</label>
             <span class='hdpp-note' style="margin-top: 9px; font-style:italic;">NOTE: This feature is restricted to admin users only. Use the <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin to bypass this restriction.</span>
           </td>
         </tr>
@@ -122,10 +122,10 @@
             <span class='hdpp-note'>Define a custom list of time spent options to override the defaults shown on the quick entry toolbar</span>
           </td>
           <td id="hdpp-timeSpent">
-            <div><input type="text" default="15m" value="15m"  /></div>
-            <div><input type="text" default="30m" value="30m"   /></div>
-            <div><input type="text" default="45m" value="45m"   /></div>
-            <div><input type="text" default="1h" value="1h"   /></div>
+            <div><input type="text" default="15m" value="15m"></div>
+            <div><input type="text" default="30m" value="30m"></div>
+            <div><input type="text" default="45m" value="45m"></div>
+            <div><input type="text" default="1h" value="1h"></div>
           </td>
         </tr>
       </table>
@@ -188,7 +188,7 @@
           <td>
             <div id="hdpp-reqValForm" style="display:none;">
               <span class='hdpp-note' style="margin-bottom: 9px;">Use pipe "|" character if specifying more than one required value (ie. "Value1|Value2")</span>
-              <input id="hdpp-reqVal" type="text" /> <button type="button" class="sui-bttn hdpp-saveReqVal">Save</button>
+              <input id="hdpp-reqVal" type="text"> <button type="button" class="sui-bttn hdpp-saveReqVal">Save</button>
             </div>
             <button type="button" class="sui-bttn"  hdpp-del="#hdpp-reqClose">Remove</button> <button type="button" class="sui-bttn hdpp-editReqVal">Edit Required Values</button>
           </td>
@@ -196,7 +196,7 @@
         <tr>
           <td />
           <td>
-            <input id="hdpp-reqOpts" type="checkbox" value="true"  /> <label for="hdpp-reqOpts">Required on "Close as Duplicate" also</label>
+            <input id="hdpp-reqOpts" type="checkbox" value="true"> <label for="hdpp-reqOpts">Required on "Close as Duplicate" also</label>
           </td>
         </tr>
       </table>
@@ -214,12 +214,12 @@
           </td>
         </tr>
         <tr>
-          <td><input type="text"  /> <button type="button" class="sui-bttn" hdpp-add="#hdpp-tidy">Add</button></td>
-          <td><label for="hdpp-tidyH">Max. Height:</label> <input id="hdpp-tidyH" type="text" size="3"  /></td>
+          <td><input type="text"> <button type="button" class="sui-bttn" hdpp-add="#hdpp-tidy">Add</button></td>
+          <td><label for="hdpp-tidyH">Max. Height:</label> <input id="hdpp-tidyH" type="text" size="3"></td>
         </tr>
         <tr>
           <td><select id="hdpp-tidy" multiple="multiple" size="4"></select></td>
-          <td><label for="hdpp-tidyW">Max. Width:</label> <input id="hdpp-tidyW" type="text" size="3"  /></td>
+          <td><label for="hdpp-tidyW">Max. Width:</label> <input id="hdpp-tidyW" type="text" size="3"></td>
         </tr>
         <tr>
           <td><button type="button" class="sui-bttn"  hdpp-del="#hdpp-tidy">Remove</button></td>
@@ -227,7 +227,7 @@
         </tr>
         <tr>
           <td>
-            <input id="hdpp-tidyMulti" type="checkbox" value="true"  /> <label for="hdpp-tidyMulti">Tidy up multi-line comments also</label>
+            <input id="hdpp-tidyMulti" type="checkbox" value="true"> <label for="hdpp-tidyMulti">Tidy up multi-line comments also</label>
           </td>
           <td />
         </tr>
@@ -244,7 +244,7 @@
       <ul>
         <li>Official Website: <a href="https://www.michaelmaw.com/apps/help-desk-powerpack/" target="_blank">https://www.michaelmaw.com/apps/help-desk-powerpack/</a></li>
         <li>App Center Plugin: <a href="https://community.spiceworks.com/appcenter/app/plugin_457" target="_blank">https://community.spiceworks.com/appcenter/app/plugin_457</a></li>
-        <li>Contact Support: <a href="mailto:support@michaelmaw.com">support@michaelmaw.com</a></li>
+        <li>Report an Issue: <a href="https://github.com/michaelmaw/spiceworks-hdpp/issues" target="_blank">https://github.com/michaelmaw/spiceworks-hdpp/issues</a></li>
       </ul>
     </div>
   </div>
