--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <li>
       <a data-content-source="html" data-target="#hdpp-form" data-toggle="tab" href="javascript:void(0)">Ticket Form</a>
     </li>
-     <li>
+    <li>
       <a data-content-source="html" data-target="#hdpp-required" data-toggle="tab" href="javascript:void(0)">Required Fields</a>
     </li>
     <li>
@@ -22,8 +22,8 @@
     <div class="tab-pane active" id="hdpp-list">
       <table>
         <tr>
-           <td>
-             <h3>Ticket Counts</h3>
+          <td>
+            <h3>Ticket Counts</h3>
             <span class='hdpp-note'>Show totals on the ticket view dropdown menu</span>
           </td>
           <td>
@@ -33,7 +33,8 @@
         </tr>
         <tr>
           <td>
-            <input id="hdpp-counts" type="checkbox" value="true"> <label for="hdpp-counts">Enable Ticket Counts</label>
+            <input id="hdpp-counts" type="checkbox" value="true">
+            <label for="hdpp-counts">Enable Ticket Counts</label>
           </td>
           <td>
             <select id="hdpp-rows">
@@ -63,12 +64,23 @@
           </td>
         </tr>
         <tr>
-          <td><select id="hdpp-viewOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-views" hdpp-sort="false">Add</button></td>
+          <td>
+            <select id="hdpp-viewOpts">
+              <option>Loading...</option>
+            </select>
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-views" hdpp-sort="false">Add</button>
+          </td>
           <td rowspan="3">
-            <input id="hdpp-stats-leader" type="checkbox" value="true"> <label for="hdpp-stats-leader">Show Leaderboard</label><br />
-            <input id="hdpp-stats-rank" type="checkbox" value="true"> <label for="hdpp-stats-rank">Show Ranking</label><br />
-            <input id="hdpp-stats-totals" type="checkbox" value="true"> <label for="hdpp-stats-totals">Show Tickets Closed (7 Days/30 Days)</label>
-            <span class='hdpp-note' style="margin-top: 9px; font-style:italic;">NOTE: This feature is restricted to admin users only. Use the <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin to bypass this restriction.</span>
+            <input id="hdpp-stats-leader" type="checkbox" value="true">
+            <label for="hdpp-stats-leader">Show Leaderboard</label>
+            <br />
+            <input id="hdpp-stats-rank" type="checkbox" value="true">
+            <label for="hdpp-stats-rank">Show Ranking</label>
+            <br />
+            <input id="hdpp-stats-totals" type="checkbox" value="true">
+            <label for="hdpp-stats-totals">Show Tickets Closed (7 Days/30 Days)</label>
+            <span class='hdpp-note' style="margin-top: 9px; font-style:italic;">NOTE: This feature is restricted to admin users only. Use the
+              <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin to bypass this restriction.</span>
           </td>
         </tr>
         <tr>
@@ -78,9 +90,9 @@
         </tr>
         <tr>
           <td>
-            <button type="button" class="sui-bttn"  hdpp-del="#hdpp-views">Remove</button>
-            <button type="button" class="sui-bttn"  hdpp-up="#hdpp-views">&#9650;</button>
-            <button type="button" class="sui-bttn"  hdpp-down="#hdpp-views">&#9660;</button>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-views">Remove</button>
+            <button type="button" class="sui-bttn" hdpp-up="#hdpp-views">&#9650;</button>
+            <button type="button" class="sui-bttn" hdpp-down="#hdpp-views">&#9660;</button>
           </td>
         </tr>
       </table>
@@ -122,10 +134,18 @@
             <span class='hdpp-note'>Define a custom list of time spent options to override the defaults shown on the quick entry toolbar</span>
           </td>
           <td id="hdpp-timeSpent">
-            <div><input type="text" default="15m" value="15m"></div>
-            <div><input type="text" default="30m" value="30m"></div>
-            <div><input type="text" default="45m" value="45m"></div>
-            <div><input type="text" default="1h" value="1h"></div>
+            <div>
+              <input type="text" default="15m" value="15m">
+            </div>
+            <div>
+              <input type="text" default="30m" value="30m">
+            </div>
+            <div>
+              <input type="text" default="45m" value="45m">
+            </div>
+            <div>
+              <input type="text" default="1h" value="1h">
+            </div>
           </td>
         </tr>
       </table>
@@ -142,29 +162,43 @@
           </td>
         </tr>
         <tr>
-          <td><select id="hdpp-showFieldsOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-showFields" hdpp-sort="false">Add</button></td>
-          <td><select id="hdpp-contactOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-contactFields" hdpp-sort="false">Add</button></td>
-        </tr>
-        <tr>
-          <td><select id="hdpp-showFields" multiple="multiple" size="4"></select></td>
-          <td><select id="hdpp-contactFields" multiple="multiple" size="4"></select></td>
-        </tr>
-        <tr>
           <td>
-            <button type="button" class="sui-bttn"  hdpp-del="#hdpp-showFields">Remove</button>
-            <button type="button" class="sui-bttn"  hdpp-up="#hdpp-showFields">&#9650;</button>
-            <button type="button" class="sui-bttn"  hdpp-down="#hdpp-showFields">&#9660;</button>
+            <select id="hdpp-showFieldsOpts">
+              <option>Loading...</option>
+            </select>
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-showFields" hdpp-sort="false">Add</button>
           </td>
           <td>
-            <button type="button" class="sui-bttn"  hdpp-del="#hdpp-contactFields">Remove</button>
-            <button type="button" class="sui-bttn"  hdpp-up="#hdpp-contactFields">&#9650;</button>
-            <button type="button" class="sui-bttn"  hdpp-down="#hdpp-contactFields">&#9660;</button>
+            <select id="hdpp-contactOpts">
+              <option>Loading...</option>
+            </select>
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-contactFields" hdpp-sort="false">Add</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <select id="hdpp-showFields" multiple="multiple" size="4"></select>
+          </td>
+          <td>
+            <select id="hdpp-contactFields" multiple="multiple" size="4"></select>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-showFields">Remove</button>
+            <button type="button" class="sui-bttn" hdpp-up="#hdpp-showFields">&#9650;</button>
+            <button type="button" class="sui-bttn" hdpp-down="#hdpp-showFields">&#9660;</button>
+          </td>
+          <td>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-contactFields">Remove</button>
+            <button type="button" class="sui-bttn" hdpp-up="#hdpp-contactFields">&#9650;</button>
+            <button type="button" class="sui-bttn" hdpp-down="#hdpp-contactFields">&#9660;</button>
           </td>
         </tr>
       </table>
     </div>
     <div class="tab-pane" id="hdpp-required">
-       <table>
+      <table>
         <tr>
           <td>
             <h3>Required Fields (New Tickets)</h3>
@@ -176,27 +210,46 @@
           </td>
         </tr>
         <tr>
-          <td><select id="hdpp-reqNewOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-reqNew">Add</button></td>
-          <td><select id="hdpp-reqCloseOpts"><option>Loading...</option></select> <button type="button" class="sui-bttn" hdpp-add="#hdpp-reqClose">Add</button></td>
+          <td>
+            <select id="hdpp-reqNewOpts">
+              <option>Loading...</option>
+            </select>
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-reqNew">Add</button>
+          </td>
+          <td>
+            <select id="hdpp-reqCloseOpts">
+              <option>Loading...</option>
+            </select>
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-reqClose">Add</button>
+          </td>
         </tr>
         <tr>
-          <td><select id="hdpp-reqNew" multiple="multiple" size="4"></select></td>
-          <td><select id="hdpp-reqClose" multiple="multiple" size="4"></select></td>
+          <td>
+            <select id="hdpp-reqNew" multiple="multiple" size="4"></select>
+          </td>
+          <td>
+            <select id="hdpp-reqClose" multiple="multiple" size="4"></select>
+          </td>
         </tr>
         <tr>
-          <td><button type="button" class="sui-bttn"  hdpp-del="#hdpp-reqNew">Remove</button></td>
+          <td>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-reqNew">Remove</button>
+          </td>
           <td>
             <div id="hdpp-reqValForm" style="display:none;">
               <span class='hdpp-note' style="margin-bottom: 9px;">Use pipe "|" character if specifying more than one required value (ie. "Value1|Value2")</span>
-              <input id="hdpp-reqVal" type="text"> <button type="button" class="sui-bttn hdpp-saveReqVal">Save</button>
+              <input id="hdpp-reqVal" type="text">
+              <button type="button" class="sui-bttn hdpp-saveReqVal">Save</button>
             </div>
-            <button type="button" class="sui-bttn"  hdpp-del="#hdpp-reqClose">Remove</button> <button type="button" class="sui-bttn hdpp-editReqVal">Edit Required Values</button>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-reqClose">Remove</button>
+            <button type="button" class="sui-bttn hdpp-editReqVal">Edit Required Values</button>
           </td>
         </tr>
         <tr>
           <td />
           <td>
-            <input id="hdpp-reqOpts" type="checkbox" value="true"> <label for="hdpp-reqOpts">Required on "Close as Duplicate" also</label>
+            <input id="hdpp-reqOpts" type="checkbox" value="true">
+            <label for="hdpp-reqOpts">Required on "Close as Duplicate" also</label>
           </td>
         </tr>
       </table>
@@ -214,20 +267,34 @@
           </td>
         </tr>
         <tr>
-          <td><input type="text"> <button type="button" class="sui-bttn" hdpp-add="#hdpp-tidy">Add</button></td>
-          <td><label for="hdpp-tidyH">Max. Height:</label> <input id="hdpp-tidyH" type="text" size="3"></td>
+          <td>
+            <input type="text">
+            <button type="button" class="sui-bttn" hdpp-add="#hdpp-tidy">Add</button>
+          </td>
+          <td>
+            <label for="hdpp-tidyH">Max. Height:</label>
+            <input id="hdpp-tidyH" type="text" size="3">
+          </td>
         </tr>
         <tr>
-          <td><select id="hdpp-tidy" multiple="multiple" size="4"></select></td>
-          <td><label for="hdpp-tidyW">Max. Width:</label> <input id="hdpp-tidyW" type="text" size="3"></td>
+          <td>
+            <select id="hdpp-tidy" multiple="multiple" size="4"></select>
+          </td>
+          <td>
+            <label for="hdpp-tidyW">Max. Width:</label>
+            <input id="hdpp-tidyW" type="text" size="3">
+          </td>
         </tr>
         <tr>
-          <td><button type="button" class="sui-bttn"  hdpp-del="#hdpp-tidy">Remove</button></td>
+          <td>
+            <button type="button" class="sui-bttn" hdpp-del="#hdpp-tidy">Remove</button>
+          </td>
           <td />
         </tr>
         <tr>
           <td>
-            <input id="hdpp-tidyMulti" type="checkbox" value="true"> <label for="hdpp-tidyMulti">Tidy up multi-line comments also</label>
+            <input id="hdpp-tidyMulti" type="checkbox" value="true">
+            <label for="hdpp-tidyMulti">Tidy up multi-line comments also</label>
           </td>
           <td />
         </tr>
@@ -236,15 +303,27 @@
     <div class="tab-pane" id="hdpp-help">
       <h3>Plugin Requirements</h3>
       <ul>
-        <li>This plugin is only compatible with the <b>"v2"</b> version of the Help Desk - <a href="https://community.spiceworks.com/how_to/46922-switching-between-the-existing-and-new-spiceworks-help-desk" target="_blank">Learn how to switch</a></li>
-        <li>The <b>Contact Cards</b> and <b>Stats & Rankings</b> features require use of the <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin for non-admins</li>
+        <li>This plugin is only compatible with the
+          <b>"v2"</b> version of the Help Desk -
+          <a href="https://community.spiceworks.com/how_to/46922-switching-between-the-existing-and-new-spiceworks-help-desk" target="_blank">Learn how to switch</a>
+        </li>
+        <li>The
+          <b>Contact Cards</b> and
+          <b>Stats &amp; Rankings</b> features require use of the
+          <a href="https://community.spiceworks.com/appcenter/app/plugin_1747" target="_blank">Pepper Roles</a> plugin for non-admins</li>
       </ul>
       <hr />
       <h3>Support Resources</h3>
       <ul>
-        <li>Official Website: <a href="https://www.michaelmaw.com/apps/help-desk-powerpack/" target="_blank">https://www.michaelmaw.com/apps/help-desk-powerpack/</a></li>
-        <li>App Center Plugin: <a href="https://community.spiceworks.com/appcenter/app/plugin_457" target="_blank">https://community.spiceworks.com/appcenter/app/plugin_457</a></li>
-        <li>Report an Issue: <a href="https://github.com/michaelmaw/spiceworks-hdpp/issues" target="_blank">https://github.com/michaelmaw/spiceworks-hdpp/issues</a></li>
+        <li>App Center Plugin:
+          <a href="https://community.spiceworks.com/appcenter/app/plugin_457" target="_blank">https://community.spiceworks.com/appcenter/app/plugin_457</a>
+        </li>
+        <li>GitHub Repository:
+          <a href="https://github.com/michaelmaw/spiceworks-hdpp" target="_blank">https://github.com/michaelmaw/spiceworks-hdpp</a>
+        </li>
+        <li>Report an Issue:
+          <a href="https://github.com/michaelmaw/spiceworks-hdpp/issues" target="_blank">https://github.com/michaelmaw/spiceworks-hdpp/issues</a>
+        </li>
       </ul>
     </div>
   </div>
